--- a/home.html
+++ b/home.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climeo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
 
     <ul class="nav nav-underline">
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="home.html">Home</a>
         </li>
         <li class="nav-item2">
-            <a class="nav-link" aria-current="page" href="">Contato</a>
+            <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
         </li>
         <li class="nav-item3">
-            <a class="nav-link" aria-current="page" href="#">Ajuda</a>
+            <a class="nav-link" aria-current="page" href="ajuda.html">Ajuda</a>
         </li>
     </ul>
             
 </body>
 
-<script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </html>
